# SpaceEvader

./: .gitignore  CMakeLists.txt  README.md  build_win.bat
src/: controller.cpp  controller.h  game.cpp  game.h  gameobject.cpp  gameobject.h  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h  renderer.cpp  renderer.h
